--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -11,7 +11,7 @@
         <ul class="navbar-nav">
         <li class="nav-item"><a class=" nav-link" routerLink="orderpizza">Order Pizza</a>
         </li>
-        <li class="nav-item"><a class=" nav-link" routerLink="buildpizza" >Build Your Pizza</a>
+        <li class="nav-item"><a class=" nav-link" routerLink="buildpizza" >Build ur Pizza</a>
         </li>
         </ul>
         <div class="navbar-nav ml-auto">
